--- a/software/final385/Makefile
+++ b/software/final385/Makefile
@@ -142,7 +142,9 @@ ACDS_VERSION := 18.1
 ELF := final385.elf
 
 # Paths to C, C++, and assembly source files.
-C_SRCS := main.c
+C_SRCS += main.c
+C_SRCS += io_handler.c
+C_SRCS += usb.c
 CXX_SRCS :=
 ASM_SRCS :=
 
