--- a/final385.qsf
+++ b/final385.qsf
@@ -584,6 +584,7 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity l
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE hpi_io_intf.sv
 set_global_assignment -name QIP_FILE final385_soc/synthesis/final385_soc.qip
 set_global_assignment -name QIP_FILE vga_clk.qip
 set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
